# babilim

./: .gitignore  README.md  babilim.opam  configure
babilim/: babilim.ml  jbuild
example/: core.ml  jbuild
metaprintf/: babilim.ml  conv.ml  conv.mli  jbuild  lexer.mll  math_expr.ml  math_expr.mli  metafmt.ml  metafmt.mli  parse.ml  parse.mli  parser.mly  tmap.ml  tmap.mli  untyped.ml  untyped.mli  witness.ml  witness.mli
plugin/: babilim.ml  jbuild
po/: escape.ml  jbuild  lexer.mll  math.mly  math_lex.mll  option.ml  parse.ml  parser.mly  types.ml
test/: jbuild  metafmt.ml
translations/: fr.po  ocaml.pot
translator/: jbuild  store.ml  translator.ml
xtract/: jbuild  xtract.ml
